2006-06-26  Phil Muldoon  <pmuldoon@redhat.com>

	* funit-forks.c: Removed waits.

2006-06-25  Phil Muldoon  <pmuldoon@redhat.com>

	* funit-forks.c: Fix warnings. Removed printed output.
	* funit-forks.c: Added Chris Moller's fork
	stress tester. 

2006-06-23 	Nurdin Premji <npremji@redhat.com>
	* funit-child.c Added signal SIGBUS to exit a thread.

2006-06-21  Stepan Kasal  <kasal@ucw.cz>

	* util.h: Include linux.syscall.h; the calers need not to do that.
	* funit-threadexit.c: Remove duplicate #include <unistd.h>.

2006-06-15  Nurdin Premji  <npremji@redhat.com>

	* funit-child.c: Added #include <linux.syscall.h> and <unistd.h>.
	* funit-exec.c: Ditto.
	* funit-syscallint.c: Ditto.
	* funit-threadexit.c: Ditto.
	* funit-threads.c: Ditto.

2006-06-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* funit-syscallint.c: Added trace calls.

2006-05-01  Stan Cox  <scox@redhat.com>

	* funit-threadexit.c (main): New file.

2006-04-15  Andrew Cagney  <cagney@redhat.com>

	* funit-print-auxv.c (main): Assume the optional argument is the
	output file name.

	* funit.xml: Add reference to funit-exec, and funit-child.
	* util.h: #include <stdlib.h>.
	* funit-child.c: Re-implement exec, so that it can exec a program
	specified as an argument.
	* funit-exec.c, funit-exec.xml: New files.

2006-03-20  Andrew Cagney  <cagney@redhat.com>

	* funit-child.c (notify_manager): Always print the trace message.
	(server): Delete log messages now made redundant.

2006-03-19  Andrew Cagney  <cagney@redhat.com>

	* funit-threads.xml: New file.
	* funit-child.c (OK, ok, pfatal, fatal, trace): Move to "util.h";
	#include.
	* util.h: New file.
	* funit-threads.c: Include "util.h"; add OK to all pthread calls.
	(op_clone): Rename loop.
	(op_loop, op_block, usage): New.
	(main): Parse --block, --clone and --loop.

2006-02-23  Andrew Cagney  <cagney@redhat.com>

	* funit-child.c (main, server, main_alarm): Add global variable
	main_alarm.  Move alarm call to server function, all new processes